syntax = "proto3";

import "rpc.proto";

package protobuf.secret_llama_v1_0;

enum error_types {
	error_types_OK = 0;
	error_types_OUT_OF_MEMORY = 1;
	error_types_BAD_MAGIC_NUMBER = 2;
	error_types_BAD_VERSION = 3;
	error_types_BAD_CLASSIFIER = 4;
	error_types_BAD_GROUP_SIZE = 5;
	error_types_TOO_SMALL = 6;
	error_types_INVALID_PRINTF = 7;
	error_types_CANNOT_ENCODE_NULL_TEXT = 8;
	error_types_UNKNOWN_ERROR = 9;
	error_types_LLM_STILL_PROCESSING = 10;
	error_types_LLM_NEEDS_USER_INPUT = 11;
	error_types_LLM_STEPS_EXHAUSTED = 12;
	error_types_UNABLE_TO_LOAD_RNG = 13;
	error_types_RANDOM_NUMBER_GENERATOR_FAILED = 14;
	error_types_NOT_IMPLEMENTED = 15;
	error_types_MODEL_NOT_LOADED = 16;
	error_types_TOKENIZER_NOT_LOADED = 17;
	error_types_TOKENIZER_FAULT = 18;
	error_types_INVALID_CONTEXT = 19;
	error_types_INVALID_PROMPT = 20;
	error_types_NOT_LOGGED_IN = 21;
	error_types_PERMISSION_DENIED = 22;
	error_types_UNABLE_TO_SAVE_RECORD = 23;
	error_types_UNABLE_TO_LOAD_RECORD = 24;
	error_types_UNABLE_TO_GET_PIECE = 25;
	error_types_UNABLE_TO_DECODE = 26;
	error_types_UNABLE_TO_LOAD_MODEL = 27;
	error_types_UNABLE_TO_REMOVE_RECORD = 28;
	error_types_UNABLE_TO_LIST_RECORDS = 29;
	error_types_UNABLE_TO_LIST_KEYS = 30;
	error_types_UNABLE_TO_LOAD_FILE_SYSTEM = 31;
	error_types_UNABLE_TO_LIST_FILES = 32;
	error_types_UNABLE_TO_REMOVE_FILE = 33;
	error_types_UNABLE_TO_DOWNLOAD_FILE = 34;
	error_types_UNABLE_TO_GET_DOWNLOAD_STATUS = 35;
	error_types_UNABLE_TO_GET_SENDER = 36;
	error_types_UNABLE_TO_MAP_FILE = 37;
	error_types_UNABLE_TO_TOKENIZE = 38;
	error_types_ADMIN_ACCOUNT_MUST_BE_ADMINISTRATOR = 39;
	error_types_ACCOUNT_ALREADY_EXISTS = 40;
	error_types_ACCOUNT_NOT_FOUND = 41;
	error_types_MAX_USER_CONTEXTS_EXCEEDED = 42;
	error_types_MAX_CONTEXTS_EXCEEDED = 43;
	error_types_UNABLE_TO_CREATE_TIMEOUT = 44;
	error_types_CONTEXT_EXPIRED = 45;
	error_types_CONTEXT_NOT_FINISHED = 46;
	error_types_CONTEXT_MISSING = 47;
	error_types_CONTEXT_SIZE_EXCEEDED = 48;
	error_types_MODEL_FAILED = 49;
	error_types_ENGINE_NOT_LOADED = 50;
	error_types_DECODE_FAILURE = 51;
	error_types_UNABLE_TO_CONVERT_TOKEN_TO_PIECE = 52;
	error_types_UNABLE_TO_APPLY_CHAT_TEMPLATE = 53;
	error_types_EXCEPTION_THROWN = 54;
	error_types_CALLBACK_ALREADY_ASSIGNED = 55;
	error_types_CALLBACK_NOT_ASSIGNED = 56;
	error_types_ERROR_TYPES_SENTINEL = 2147483647;
}

enum llm_engine_type {
	llm_engine_type_LLAMA2_C = 0;
	llm_engine_type_LLAMA_CPP = 1;
	llm_engine_type_BITNET = 2;
}

enum model_format {
	model_format_OPENVINO = 0;
	model_format_ONNX = 1;
	model_format_TENSORFLOW = 2;
	model_format_PYTORCH = 3;
	model_format_TENSORFLOWLITE = 4;
	model_format_GGML = 5;
	model_format_GGUF = 6;
	model_format_LLAMA2 = 7;
	model_format_PADDLE_PADDLE = 8;
	model_format_CAFFE = 9;
	model_format_MXNET = 10;
	model_format_AUTODETECT = 11;
}

enum tensor_type {
	tensor_type_FP16 = 0;
	tensor_type_FP32 = 1;
	tensor_type_FP64 = 2;
	tensor_type_BF16 = 3;
	tensor_type_U8 = 4;
	tensor_type_I32 = 5;
	tensor_type_I64 = 6;
}

enum encryption_type {
	encryption_type_NONE = 0;
	encryption_type_AES_GCM = 1;
	encryption_type_AES_CTR = 2;
	encryption_type_AES_ECB = 3;
}

enum hash_type {
	hash_type_NONE = 0;
	hash_type_SHA1 = 1;
	hash_type_SHA2_256 = 2;
	hash_type_SHA2_384 = 3;
	hash_type_SHA2_512 = 4;
	hash_type_SHA3_256 = 5;
	hash_type_SHA3_384 = 6;
	hash_type_SHA3_512 = 7;
	hash_type_MD5 = 8;
	hash_type_CMAC_128 = 11;
}

enum access {
	access_PUBLIC = 0;
	access_PRIVATE = 1;
}

message llm_model {
	string name = 1;
	string local_path = 2;
	string url = 3;
	string description = 4;
	llm_engine_type engine_type = 5;
	string engine_config = 6;
	encryption_type encryption_type = 7;
	string encryption_key = 8;
	hash_type hash_type = 9;
	string hash = 10;
	bool is_loaded = 11;
	access access = 12;
	uint64 inactivitiy_timeout = 13;
}

message tokenizer {
	string name = 1;
	string local_path = 2;
	string url = 3;
	string description = 4;
	model_format model_format = 5;
	llm_engine_type engine_type = 6;
	tensor_type tensor_type = 7;
	encryption_type encryption_type = 8;
	string encryption_key = 9;
	hash_type hash_type = 10;
	string hash = 11;
	bool is_loaded = 12;
	access access = 13;
}

message model_list_item {
	string name = 1;
	string local_path = 2;
	string url = 3;
	string description = 4;
	llm_engine_type engine_type = 5;
	string engine_config = 6;
	encryption_type encryption_type = 7;
	hash_type hash_type = 8;
	string hash = 9;
	uint64 file_size = 10;
	bool is_loaded = 11;
	access access = 12;
	uint64 inactivitiy_timeout = 13;
}

message tokenizer_list_item {
	string name = 1;
	string local_path = 2;
	string url = 3;
	string description = 4;
	model_format model_format = 5;
	llm_engine_type engine_type = 6;
	tensor_type tensor_type = 7;
	encryption_type encryption_type = 8;
	hash_type hash_type = 9;
	string hash = 10;
	uint64 file_size = 11;
	bool is_loaded = 12;
	access access = 13;
}

enum role {
	role_GUEST = 0;
	role_USER = 1;
	role_ADMINISTRATOR = 2;
}

message account {
	string name = 1;
	role role = 2;
	string passkey = 3;
}

message account_list_item {
	string name = 1;
	role role = 2;
}

enum chat_response_state {
	chat_response_state_PIECE = 0;
	chat_response_state_END = 1;
}

message chat_response_piece_binary {
	chat_response_state state = 1;
	string piece = 2;
}

message chat_response_piece_string {
	chat_response_state state = 1;
	string piece = 2;
}

// ===== i_context_event Service Messages =====

message i_context_event_pieceRequest {
	string piece = 1;
}

message i_context_event_pieceResponse {
	int32 result = 1;
}

// ===== i_context_event Service =====
service i_context_event {
	rpc piece(i_context_event_pieceRequest) returns (i_context_event_pieceResponse);
}

// ===== i_context Service Messages =====

message i_context_add_promptRequest {
	string prompt = 1;
}

message i_context_add_promptResponse {
	int32 result = 1;
}

message i_context_set_callbackRequest {
	rpc.interface_descriptor event = 1;
}

message i_context_set_callbackResponse {
	int32 result = 1;
}

// ===== i_context Service =====
service i_context {
	rpc add_prompt(i_context_add_promptRequest) returns (i_context_add_promptResponse);
	rpc set_callback(i_context_set_callbackRequest) returns (i_context_set_callbackResponse);
}

// ===== i_llm Service Messages =====

message i_llm_create_contextRequest {
	string model_name = 1;
	string overrides = 2;
}

message i_llm_create_contextResponse {
	rpc.interface_descriptor chat = 1;
	int32 result = 2;
}

// ===== i_llm Service =====
service i_llm {
	rpc create_context(i_llm_create_contextRequest) returns (i_llm_create_contextResponse);
}

// ===== i_test Service Messages =====

message i_test_runRequest {
}

message i_test_runResponse {
	int32 result = 1;
}

// ===== i_test Service =====
service i_test {
	rpc run(i_test_runRequest) returns (i_test_runResponse);
}

